--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+jwt.secret=XGyoq0weAz0Vu8aqJwZG0/LMNKw/3apCjxzNN4jUjn0=
+jwt.expiration=86400000
